--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@react-navigation/material-top-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@telenko/react-native-paper-autocomplete": "^1.0.3",
     "dayjs": "^1.11.18",
     "expo": "~54.0.7",
     "expo-blur": "~15.0.7",
+    "expo-file-system": "~19.0.14",
     "expo-image": "~3.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.7",
     "jwt-decode": "^4.0.0",
@@ -34,9 +37,7 @@
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "expo-file-system": "~19.0.14",
-    "expo-image-picker": "~17.0.8"
+    "react-native-screens": "~4.16.0"
   },
   "private": true,
   "devDependencies": {
