--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jwt-decode": "^4.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.64",
@@ -37,7 +38,8 @@
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "@react-native-community/datetimepicker": "8.4.4"
   },
   "private": true,
   "devDependencies": {
